refactor(lib): loader/saver services

--- a/.gitignore
+++ b/.gitignore
@@ -346,10 +346,10 @@ node_modules/
 # Visual Studio 6 workspace options file
 *.opt
 
-# Visual Studio 6 auto-generated workspace file (contains which files were read etc.)
+# Visual Studio 6 auto-generated workspace file (contains which files were load etc.)
 *.vbw
 
-# Visual Studio 6 auto-generated project file (contains which files were read etc.)
+# Visual Studio 6 auto-generated project file (contains which files were load etc.)
 *.vbp
 
 # Visual Studio 6 workspace and project file (working project files containing files to include in project)
